# sogbo

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
afterglow_library_data/: C0_lc.h5  broadband0d00.h5
examples/: bmk_oned.py  bmk_ring.py  bmk_twod.py
sogbo/: __init__.py
src/: rad.cpp  rad.hpp  rad_hydro.cpp  rad_hydro.pxd  rad_hydro.pyx  rad_units.cpp  rad_units.hpp
tools/: rad.cpp  rad.hpp  rad_hydro.pxd  rad_hydro.pyx  radiation.py  setup.py  utility.py
