[metadata]
name = sogbo 
version = attr: sogbo.version.__version__
description = A synchrotron radiaition module for post processing hydro data
long_description = README.md
keywords = astrophysics, radiation, education
license = MIT License 
classifiers = 
    Framework :: Cython
    Programming Language :: Python :: 3
    Programming Language :: C++ :: 17

[build_ext]
inplace=1

[options]
zip_safe = False 
include_packae_data = True
package = find: 
installl_requires =
    Cython
    numpy 

