[metadata]
name             = sogbo
version          = attr: sogbo.version.__version__
author           = Marcus DuPont
author_email     = md4469@nyu.edu
url              = https://github.com/eigendev/radiation
description      = Synchrotron Radiaition Post-Processing Module
long_description = file: README.md
long_description_content_type = text/markdown
keywords                      = physics, setuptools
license                       = BSD 3-Clause License
classifiers                   =
        Programming Language :: Python :: 3,
        Programming Language :: C++,
        License :: OSI Approved :: MIT License,
        Operating System :: OS Independent,
        Development Status :: 4 - Beta,
        Intended Audience :: Science/Research,
        Topic :: Scientific/Engineering :: Astronomy

[build_ext]
inplace=1

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy >= 1.10
    scipy >= 0.14
    cython